// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TimePicker default 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            Start Time
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    HH:MM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-32-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker with custom placeholder 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            Duration
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    --:--
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-35-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker with custom time format 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            Duration
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    03:30
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-33-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker with custom time interval 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            Duration
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    03:30
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-34-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker with error state 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  color: #cc1439;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c8 .c9 {
  margin-bottom: 8px;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            End Time
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1j4q2ea-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    HH:MM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-36-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c6"
          color="red"
        >
          <svg
            aria-hidden={true}
            className="c7"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="error"
            mr="x1"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <div
            className="c8"
          >
            <p
              className="c9 c10"
              color="currentColor"
              disabled={false}
              fontSize="medium"
            >
              This time is invalid
            </p>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker with min and max time 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c5 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c5:hover {
  color: #434d59;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2 "
        color="black"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="c3"
          data-testid="field-label"
        >
          <span
            className="c4"
          >
            End Time
          </span>
        </div>
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    HH:MM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-37-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c5"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
